Add checkstyle, rename class names